--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -7,7 +7,11 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'home' %}">Movies</a>
+                <a class="navbar-brand" href="{% url 'home' %}">
+                    {% load static %}
+                    <img src="{% static 'images/inicio.jpg' %}" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top" />
+                    Movies</a>
                 <button class="navbar-toggler" type="button" data-bstoggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" arialabel="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
